--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <option>Ortho DB</option>
   <option>Meta Prediction</option>
 </select>
-<div id="chart"></div>
+<div id="chart" style="width: 100%; height: 100%; text-align: center;">
+  <img id="loading-image" src="./loader.gif" alt="Loading..." />
+</div>
 </body>
 
 </html>
