--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.3/js/jquery.tablesorter.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src='https://cdn.jsdelivr.net/gh/sparqling/spang@41f3ce3/js/spang.min.js'></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.min.js"></script>
   <script src="ortholog.js"></script>
   <script src="taxonomy.js"></script>
   <script src="go.js"></script>
