--- a/index.html
+++ b/index.html
@@ -14,12 +14,80 @@
   <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
   <script src='https://cdn.jsdelivr.net/gh/sparqling/spang@41f3ce3/js/spang.min.js'></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/numeric/1.2.6/numeric.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.min.js"></script>
+  <script type="text/javascript" src="d3-heatmap-dendro.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/cmpolis/hcluster.js/hcluster.min.js"></script>
   <script src="ortholog.js"></script>
   <script src="taxonomy.js"></script>
   <script src="go.js"></script>
+  <style>
+      #d3tooltip {
+          position: absolute;
+          width: 200px;
+          height: auto;
+          padding: 10px;
+          background-color: #fafafa;
+          -webkit-border-radius: 10px;
+          -moz-border-radius: 10px;
+          border-radius: 10px;
+          -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+          -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+          pointer-events: none;
+          opacity:0;
+      }
+
+      #d3tooltip.hidden {
+          display: none;
+      }
+
+      #d3tooltip p {
+          margin: 0;
+          font-family: sans-serif;
+          font-size: 12px;
+          line-height: 20px;
+      }
+
+      rect.selection {
+          stroke          : #333;
+          stroke-dasharray: 4px;
+          stroke-opacity  : 0.5;
+          fill            : transparent;
+      }
+
+      rect.cell-border {
+          stroke: #eee;
+          stroke-width:0.3px;
+      }
+
+      rect.cell-selected {
+          stroke: rgb(51,102,153);
+          stroke-width:0.5px;
+      }
+
+      rect.cell-hover {
+          stroke: #F00;
+          stroke-width:0.3px;
+      }
+      text.mono {
+          font-size: 9pt;
+          font-family: Consolas, courier;
+          fill: #aaa;
+      }
+
+      .rlink, .clink {
+          fill: none;
+          stroke: #ccc;
+          stroke-width: 1.5px;
+      }
+  </style>
 </head>
 
 <body>
+
+
+<div id="heatmap" style="width: 100%; height: 500px; text-align: center;">
+</div>
 
 <select style="margin-left: 10px;" id="database-select">
   <option>OMA</option>
@@ -31,6 +99,7 @@
 </div>
 <div id="chart" style="width: 100%; height: 200px; text-align: center;">
 </div>
+
 
 <div class="ui-widget">
   <!-- List of genomes -->
