Show tooltip on d3 heatmap

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 <body>
 
 
+<div id="d3tooltip">
+  <p><span id="value"></p>
+</div>
 <div id="heatmap" style="width: 100%; height: 500px; text-align: center;">
 </div>
 
