--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <style>
       #d3tooltip {
           position: absolute;
-          width: 200px;
+          /*width: 200px;*/
           height: auto;
           padding: 10px;
           background-color: #fafafa;
@@ -35,6 +35,7 @@
           box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
           pointer-events: none;
           opacity:0;
+          z-index: 1;
       }
 
       #d3tooltip.hidden {
