--- a/index.html
+++ b/index.html
@@ -91,14 +91,21 @@
 <div id="d3tooltip">
   <p><span id="value"></p>
 </div>
-<div id="heatmap" style="width: 100%; height: 500px; text-align: center;">
-</div>
 
+<label for="database-select">Source Database: </label>
 <select style="margin-left: 10px;" id="database-select">
   <option>OMA</option>
   <option>Ortho DB</option>
   <option>Meta Prediction</option>
 </select>
+<label for="v-order-select" style="margin-left: 2.5em">Vertical Order: </label>
+<select style="margin-left: 10px;" id="v-order-select">
+  <option value="tree">Taxon tree</option>
+  <option value="cell">Number of cells</option>
+</select>
+<div id="heatmap" style="width: 100%; height: 500px; text-align: center;">
+</div>
+
 <div id="loader-container" style="width: 100%; height: 200px; text-align: center;">
   <img id="loading-image" src="./loader.gif" alt="Loading..." />
 </div>
