Add share button

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
   <option value="tree">Taxon tree</option>
   <option value="cell">Number of cells</option>
 </select>
+<button type="button" class="btn" style="margin-left: 100px; display: inline; width: 80px; height: 25px" id="share-btn">Share</button>
 <br>
 <br>
 
