--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
     <div class="ui-widget my-3">
       <!-- List of genomes -->
       <div id="proteome-counter"></div>
-      <table border="0" id="selected-proteomes" class="tablesorter"></table>
+      <table id="selected-proteomes" class="tablesorter table"></table>
     </div>
 
     <div class="ui-widget my-3">
       <!-- List of genomes -->
       <div id="protein-counter"></div>
-      <table border="0" id="selected-proteins" class="tablesorter"></table>
+      <table id="selected-proteins" class="tablesorter table"></table>
     </div>
     <hr>
 
