--- a/taxonomy.html
+++ b/taxonomy.html
@@ -87,17 +87,12 @@
       <!-- Navigational info boxes  -->
       <table>
         <tr valign="top">
-          <td>
-            <table>
-              <tr>
-                <td id="taxonomy_div"></td>
-              </tr>
-            </table>
+          <td style="border-width: 1px;" id="taxonomy_div">
           </td>
           <td>
             <table>
               <tr>
-                <td id="dbpedia_div"></td>
+                <td style="border-width: 1px;"  id="dbpedia_div"></td>
               </tr>
               <tr>
                 <td id="genome_comparison_div"></td>
