--- a/go.html
+++ b/go.html
@@ -79,33 +79,35 @@
     <br/>
 
     <!-- Main titles -->
-    <div id="main_taxon_name_div"></div>
-    <div id="sub_title_div"></div>
-
-    <!-- Navigational info boxes  -->
-    <table>
-      <tr valign="top">
-        <td style="border-width: 1px;" id="go_div">
-        </td>
-        <td>
-          <table>
-            <tr>
-              <td style="border-width: 1px;" id="dbpedia_div"></td>
-            </tr>
-            <tr>
-              <td id="genome_comparison_div"></td>
-            </tr>
-            <tr>
-              <td id="specific_genes_div"></td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-
-    <!-- Main table -->
-    <div id="counter_div"></div>
-    <div id="details_div">
+    <div id="result-area">
+      <div id="main_taxon_name_div"></div>
+      <div id="sub_title_div"></div>
+  
+      <!-- Navigational info boxes  -->
+      <table>
+        <tr valign="top">
+          <td style="border-width: 1px;" id="go_div">
+          </td>
+          <td>
+            <table>
+              <tr>
+                <td style="border-width: 1px;" id="dbpedia_div"></td>
+              </tr>
+              <tr>
+                <td id="genome_comparison_div"></td>
+              </tr>
+              <tr>
+                <td id="specific_genes_div"></td>
+              </tr>
+            </table>
+          </td>
+        </tr>
+      </table>
+  
+      <!-- Main table -->
+      <div id="counter_div"></div>
+      <div id="details_div">
+      </div>
     </div>
   </div>
 </div>
