Hide result-area on the initial state

--- a/taxonomy.html
+++ b/taxonomy.html
@@ -80,36 +80,37 @@
       <br/>
       <br/>
 
-      <!-- Main titles -->
-      <div id="main_taxon_name_div"></div>
-      <div id="sub_title_div"></div>
+      <div id="result-area" style="display: none;">
+        <!-- Main titles -->
+        <div id="main_taxon_name_div"></div>
+        <div id="sub_title_div"></div>
 
-      <!-- Navigational info boxes  -->
-      <table>
-        <tr valign="top">
-          <td style="border-width: 1px;" id="taxonomy_div">
-          </td>
-          <td>
-            <table>
-              <tr>
-                <td style="border-width: 1px;"  id="dbpedia_div"></td>
-              </tr>
-              <tr>
-                <td id="genome_comparison_div"></td>
-              </tr>
-              <tr>
-                <td id="specific_genes_div"></td>
-              </tr>
-            </table>
-          </td>
-        </tr>
-      </table>
+        <!-- Navigational info boxes  -->
+        <table>
+          <tr valign="top">
+            <td style="border-width: 1px;" id="taxonomy_div">
+            </td>
+            <td>
+              <table>
+                <tr>
+                  <td style="border-width: 1px;" id="dbpedia_div"></td>
+                </tr>
+                <tr>
+                  <td id="genome_comparison_div"></td>
+                </tr>
+                <tr>
+                  <td id="specific_genes_div"></td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+        </table>
 
-      <!-- Main table -->
-      <div id="counter_div"></div>
-      <div id="details_div">
+        <!-- Main table -->
+        <div id="counter_div"></div>
+        <div id="details_div">
+        </div>
       </div>
-
     </div>
   </div>
 </div>
@@ -127,9 +128,9 @@
       currentTaxonName = null; // Forciblly reload current taxon
       load_url_state(false);
     });
-    
+
     updateSelectedCount();
-    
+
     window.onpopstate = function (event) {
       load_url_state(false);
     }
