--- a/go.html
+++ b/go.html
@@ -24,6 +24,10 @@
 </head>
 
 <body onload=init()>
+
+<div id="d3tooltip">
+  <p><span id="value"></p>
+</div>
 <nav class='navbar navbar-expand-md navbar-dark bg-primary fixed-top' id='header'>
   <div class="container-fluid">
     <div class="navbar-brand">
