Enable to switch source database

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
 
     <label for="database-select">Source Database: </label>
     <select style="margin-left: 10px;" id="database-select">
-      <option>OMA</option>
-      <option>Ortho DB</option>
-      <option>Meta Prediction</option>
+      <option value="oma">OMA</option>
+      <option value="orthodb">Ortho DB</option>
+<!--      <option>Meta Prediction</option>-->
     </select>
     <label for="h-order-select" style="margin-left: 2.5em">Horizontal Order: </label>
     <select style="margin-left: 10px;" id="h-order-select">
