Change location of input for vertical order

--- a/index.html
+++ b/index.html
@@ -110,15 +110,16 @@
       <option value="tree">Cluster by similarity (tree)</option>
       <option value="cell">Number of cells</option>
     </select>
-    <label for="v-order-select" style="margin-left: 2.5em">Vertical Order: </label>
-    <select style="margin-left: 10px;" id="v-order-select">
-      <option value="tree">Taxon tree</option>
-      <option value="cell">Number of cells</option>
-    </select>
     <button type="button" class="btn" style="margin-left: 100px; display: inline; width: 80px; height: 25px"
             id="share-btn">Share
     </button>
     <br>
+    <br>
+    <label for="v-order-select">Vertical Order: </label>
+    <select style="margin-left: 10px;" id="v-order-select">
+      <option value="tree">Taxon tree</option>
+      <option value="cell">Number of cells</option>
+    </select>
     <br>
 
     <div id="loader-container" style="width: 100%; height: 500px; text-align: center;">
