Add link to github

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
       <label id="selected-protein-label">
       </label>
     </span>
+
+    <div>
+        <a href="https://github.com/sparqling/orthology-browser" target="_blank" rel="noopener noreferrer">
+            <img src="img/GitHub-Mark-Light-32px.png">
+        </a>
+    </div>
+
   </div>
 </nav>
 
