Change size of heatmap dynamically

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       text.cell-label {
           font-size: 10pt;
           font-family: Consolas, courier;
+          text-anchor: middle;
+          text-align: center;
           fill: white;
       }
 
