Add alphabetical order

--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
     <select style="margin-left: 10px;" id="h-order-select">
       <option value="tree">Cluster by similarity (tree)</option>
       <option value="cell">Number of cells</option>
+      <option value="alpha">Alphabetical order</option>
     </select>
 
     <label for="cell-label-checkbox" style="margin-left: 2.5em">Show number: </label>
