--- a/taxonomy.html
+++ b/taxonomy.html
@@ -109,9 +109,14 @@
 
         <!-- Main table -->
         <div id="counter_div"></div>
-        <div id="details_div">
-        </div>
+        <table class="tablesorter table" id="details">
+        </table>
       </div>
+    </div>
+    <div class="ui-widget my-3">
+      <!-- List of genomes -->
+      <div id="proteome-counter"></div>
+      <table id="selected-proteomes" class="tablesorter table"></table>
     </div>
   </div>
 </div>
