--- a/go.html
+++ b/go.html
@@ -110,8 +110,14 @@
   
       <!-- Main table -->
       <div id="counter_div"></div>
-      <div id="details_div">
-      </div>
+      <table class="tablesorter table" id="details">
+      </table>
+    </div>
+
+    <div class="ui-widget my-3">
+      <!-- List of proteins -->
+      <div id="protein-counter"></div>
+      <table id="selected-proteins" class="tablesorter table"></table>
     </div>
   </div>
 </div>
@@ -137,6 +143,7 @@
     }
 
     load_url_state();
+    updateSelected();
   });
 
 </script>
