--- a/go.html
+++ b/go.html
@@ -54,6 +54,14 @@
               <label id="selected-protein-label">
               </label>
             </span>
+    <button type="button" class="btn btn-danger mx-3" style="width: 80px; height: 25px"
+            id="clear-btn">Clear
+    </button>
+    <div>
+      <a href="https://github.com/sparqling/orthology-browser" target="_blank" rel="noopener noreferrer">
+        <img src="img/GitHub-Mark-Light-32px.png">
+      </a>
+    </div>
   </div>
 </nav>
 <div id="main-area">
