--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <option value="orthodb">Ortho DB</option>
 <!--      <option>Meta Prediction</option>-->
     </select>
-    <label for="h-order-select" style="margin-left: 2.5em">Horizontal Order: </label>
+    <label for="h-order-select" style="margin-left: 2.5em">Order proteins: </label>
     <select style="margin-left: 10px;" id="h-order-select">
       <option value="tree">Cluster by similarity (tree)</option>
       <option value="cell">Number of cells</option>
@@ -137,9 +137,9 @@
     <input type="checkbox" id="cell-label-checkbox">
     <br>
     <br>
-    <label for="v-order-select">Vertical Order: </label>
+    <label for="v-order-select">Order organisms: </label>
     <select style="margin-left: 10px;" id="v-order-select">
-      <option value="tree">Taxon tree</option>
+      <option value="tree">Taxonomy tree</option>
       <option value="cell">Number of cells</option>
     </select>
     <br>
