--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
 
     <label for="database-select">Source Database: </label>
     <select style="margin-left: 10px;" id="database-select">
-      <option value="oma">OMA</option>
-      <option value="orthodb">Ortho DB</option>
-<!--      <option>Meta Prediction</option>-->
+        <option value="oma">OMA</option>
+        <option value="orthodb">Ortho DB</option>
+        <option value="homologene">HomoloGene</option>
+        <option value="custom">Custom</option>
+        <!--      <option>Meta Prediction</option>-->
     </select>
     <label for="h-order-select" style="margin-left: 2.5em">Order proteins: </label>
     <select style="margin-left: 10px;" id="h-order-select">
